apps/frontend/solid-app/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-solid-app-service
  labels:
    run: frontend-solid-app-service
  annotations:
    "prometheus.io/scrape": "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: frontend-solid-app
